<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:Amazon="http://schemas.android.com/apk/lib/com.amazon.device.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/instructionsText" />
	
    <Button
        android:id="@+id/eventStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/getStarted" />
    
    <com.amazon.device.ads.AdLayout  
        android:id="@+id/adview" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"/>
	
</LinearLayout>

<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Amazon="http://schemas.android.com/apk/lib/com.amazon.device.ads"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <com.amazon.device.ads.AdLayout  
        android:id="@+id/adview" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"/>
    
</LinearLayout>  -->