<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/lightsStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="65dp"
        android:text="@string/startLights" />

    <TextView
        android:id="@+id/textLabelRoundNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="58dp"
        android:layout_marginLeft="19dp"
        android:text="@string/roundNumber" />

    <TextView
        android:id="@+id/textValueRoundNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textLabelRoundNumber"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="" />

    <TextView
        android:id="@+id/textLabelUserScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textLabelRoundNumber"
        android:layout_alignBottom="@+id/textLabelRoundNumber"
        android:layout_alignParentRight="true"
        android:layout_marginRight="52dp"
        android:text="@string/userScore" />

    <TextView
        android:id="@+id/textValueUserScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textValueRoundNumber"
        android:layout_alignBottom="@+id/textLabelUserScore"
        android:layout_alignRight="@+id/textLabelUserScore"
        android:text="" />

</RelativeLayout>
    